fix vertical spacing for last container

--- a/src/assets-dev/stylus/imports/home.styl
+++ b/src/assets-dev/stylus/imports/home.styl
@@ -165,7 +165,8 @@ $spacing-inner
             color: #a40041
 
 .contact
-    margin: spacing.outer auto
+    margin: spacing.outer auto 0 auto
+    padding-bottom: spacing.outer
     +mq-bp(xsl, min)
         display: flex
         justify-content: center
